...
                                        <rect key="frame" x="0.0" y="14" width="133" height="46"/>
                                        <color key="backgroundColor" red="0.26274509800000001" green="0.63529411759999999" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" label="Informações"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="46" id="eyd-BU-hly"/>
                                        </constraints>
                                        <state key="normal" image="InfoButton"/>
                                        <connections>
                                            <segue destination="8Yh-BV-TBK" kind="modal" identifier="ViewAboutScreen" modalPresentationStyle="formSheet" id="Ydu-91-49A"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" image="Star"/>
                                        <state key="selected" image="Bus"/>
                                        <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FWK-Od-CVk">
                                <rect key="frame" x="13" y="565" width="129" height="30"/>
                                <state key="normal" title="Reportar problema">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wdt-qg-l7J">
                                <rect key="frame" x="221" y="565" width="140" height="30"/>
                                <state key="normal" title="RioBus no Facebook">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="RioBus" id="lds-IN-wQg">
                        <barButtonItem key="rightBarButtonItem" title="Fechar" id="HG8-gi-AVD">
                            <connections>
                                <action selector="didTapCloseButton:" destination="TAr-9s-PmU" id="X4y-cG-1hW"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Problema" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Xwb-W1-b5l">
                                            <rect key="frame" x="15" y="0.0" width="325" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Reportar problema" id="jYU-sD-bg8">
                        <barButtonItem key="backBarButtonItem" title="Problemas" id="eoH-5l-4fX"/>
                    </navigationItem>
                    <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9QZ-fr-m3g">
                                <rect key="frame" x="116" y="278" width="144" height="34"/>
                                <state key="normal" title="Enviar mensagem">
                                    <color key="titleColor" red="0.26274509800000001" green="0.63529411759999999" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
