...
        
        textLabel?.text = busLine.name
        detailTextLabel?.text = busLine.lineDescription
        
        if isFavorite {
            tintColor = .appGoldColor()
            imageView?.image = UIImage(named: "StarFilled")?.imageWithRenderingMode(.AlwaysTemplate)
        } else {
            tintColor = UIColor(white: 0.9, alpha: 1)
            imageView?.image = UIImage(named: "Star")?.imageWithRenderingMode(.AlwaysTemplate)
        }
    }
    
...
