
/* Class = "UIBarButtonItem"; title = "Fechar"; ObjectID = "2ms-xF-zH4"; */
"2ms-xF-zH4.title" = "Close";

/* Class = "UISearchBar"; placeholder = "Pesquisar linha de ônibus"; ObjectID = "7Gl-dC-szk"; */
"7Gl-dC-szk.placeholder" = "Find a bus line";

/* Class = "UIButton"; normalTitle = "Enviar mensagem"; ObjectID = "9QZ-fr-m3g"; */
"9QZ-fr-m3g.normalTitle" = "Send a message";

/* Class = "UIButton"; normalTitle = "Reportar problema"; ObjectID = "FWK-Od-CVk"; */
"FWK-Od-CVk.normalTitle" = "Report an issue";

/* Class = "UIBarButtonItem"; title = "Fechar"; ObjectID = "HG8-gi-AVD"; */
"HG8-gi-AVD.title" = "Close";

/* Class = "UIButton"; normalTitle = "RioBus no Facebook"; ObjectID = "Wdt-qg-l7J"; */
"Wdt-qg-l7J.normalTitle" = "RioBus on Facebook";

/* Class = "UILabel"; text = "Problema"; ObjectID = "Xwb-W1-b5l"; */
"Xwb-W1-b5l.text" = "Problem";

/* Class = "UIButton"; accessibilityLabel = "Informações"; ObjectID = "eQr-1u-aMf"; */
"eQr-1u-aMf.accessibilityLabel" = "Information";

/* Class = "UIBarButtonItem"; title = "Problemas"; ObjectID = "eoH-5l-4fX"; */
"eoH-5l-4fX.title" = "Issues";

/* Class = "UINavigationItem"; title = "Reportar problema"; ObjectID = "jYU-sD-bg8"; */
"jYU-sD-bg8.title" = "Report an issue";

/* Class = "UIButton"; accessibilityLabel = "Minha localização"; ObjectID = "koQ-fU-bdw"; */
"koQ-fU-bdw.accessibilityLabel" = "My location";

/* Class = "UINavigationItem"; title = "Problema"; ObjectID = "lL4-Zr-HuO"; */
"lL4-Zr-HuO.title" = "Issue";

/* Class = "UINavigationItem"; title = "RioBus"; ObjectID = "lds-IN-wQg"; */
"lds-IN-wQg.title" = "RioBus";
